Bug 1721840: Wrap RFP Check with a more coarse one to avoid hangs r=tjr

Differential Revision: https://phabricator.services.mozilla.com/D126165